# flask-webpackext

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  license.rst  make.bat  usage.rst
examples/: app.py
examples/assets/: package.json
examples/assets/js/: app.js
examples/templates/: index.html
flask_webpackext/: __init__.py  _compat.py  bundle.py  cli.py  config.py  errors.py  ext.py  manifest.py  project.py  proxies.py  version.py
tests/: conftest.py  manifest.json  test_cli.py  test_ext.py  test_flask_webpackext.py  test_manifest.py  test_project.py
tests/assets/: package.json  webpack.config.js
tests/assetsbundle/: webpack.config.js
tests/bundle1/: app1.js
tests/bundle2/: app2.js
