# -*- coding: utf-8 -*-
#
# This file is part of Flask-WebpackExt
# Copyright (C) 2017 CERN.
# Copyright (C) 2024 Graz University of Technology.
#
# Flask-WebpackExt is free software; you can redistribute it and/or modify
# it under the terms of the Revised BSD License; see LICENSE file for
# more details.

[metadata]
name = flask-webpackext
version = attr: flask_webpackext.__version__
description = Webpack integration for Flask.
long_description = file: README.rst, CHANGES.rst
keywords = flask webpack
license = BSD
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/flask-webpackext
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask>=0.11
    pywebpack>=2.1.0,<3.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    check-manifest>=0.25
    coverage>=4.0
    isort>=4.3.21
    pydocstyle>=1.0.0
    pytest-cache>=1.0
    pytest-cov>=1.8.0
    pytest>=2.8.0
    sphinx>=4.5
    sphinx-click>=1.4.0
# Kept for backwards compatibility
docs =

[options.entry_points]
flask.commands =
    webpack = flask_webpackext.cli:webpack

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=flask_webpackext --cov-report=term-missing docs tests flask_webpackext
